--- a/public/styles.css
+++ b/public/styles.css
@@ -4,11 +4,8 @@
 }
 
 @media print {
-    tr.vendorListHeading {
-/*         background-color: #1a4567 !important; */
-        print-color-adjust: exact; 
-    }
-}
+      -webkit-print-color-adjust: exact !important;
+   }
 
 @font-face {
   font-family: myFirstFont2;
