--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   </style>
   <body onload="hello()" id="p2">
     <div id="mycanvas" class="box">
-      <img src="images/<%=pass%>.png" alt="" />
+      <img src="images/<%=pass%>.jpg" alt="" />
       <div style="margin-left: 10px">
         <b><h3 style="margin-bottom: 0"><%=song%></h3></b>
         <p class="artist" style="font-family: myFirstFont"><%=artist%></p>
