--- a/views/form.ejs
+++ b/views/form.ejs
@@ -36,6 +36,8 @@
       <input type="text" name="song" placeholder="Song Name" /><br />
       <input type="text" name="artist" placeholder="Artist Name" /><br />
       <input type="file" id="img" name="img" accept="image/*" required /><br />
+
+      <!-- <input type="file" id="img2" name="img2" accept="image/*" required /><br /> -->
       <button type="submit">Submit</button>
     </form>
   </body>
